--- a/MovieApp/app/src/main/AndroidManifest.xml
+++ b/MovieApp/app/src/main/AndroidManifest.xml
@@ -15,13 +15,12 @@
         tools:targetApi="31">
         <activity
             android:name=".MovieDetailActivity"
-            android:exported="false" />
+            android:exported="false" /> <!-- Other apps CANT access this activity -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"> <!-- Other apps CAN access this activity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
