--- a/MovieApp/app/build.gradle
+++ b/MovieApp/app/build.gradle
@@ -47,4 +47,9 @@ dependencies {
     testImplementation("org.hamcrest:hamcrest:2.2")
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:"
+
+    implementation 'com.github.bumptech.glide:glide:+'
+    annotationProcessor 'com.github.bumptech.glide:compiler:+'
 }
