--- a/MovieApp/app/build.gradle
+++ b/MovieApp/app/build.gradle
@@ -18,6 +18,9 @@ android {
     }
 
     buildTypes {
+        debug{
+            buildConfigField 'String', "TMDB_API_KEY", TMDB_API_KEY
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -33,23 +36,24 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
-    testImplementation("org.hamcrest:hamcrest:2.2")
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.1'
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:"
-
-    implementation 'com.github.bumptech.glide:glide:+'
-    annotationProcessor 'com.github.bumptech.glide:compiler:+'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.5'
+    testImplementation("org.hamcrest:hamcrest:2.2")
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.1'
+    androidTestImplementation 'androidx.test:core-ktx:1.5.0'
+    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-dynamic-features-fragment:2.5.3")
+    androidTestImplementation("androidx.navigation:navigation-testing:2.5.3")
+    implementation("androidx.navigation:navigation-compose:2.5.3")
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 }
